--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -14,7 +14,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
                 </form>
-                <button (click)="cargarAdmin()" class="btn btn-secondary btn-md btn-block mt-2">Ingresar como Admin</button>
+                <button (click)="cargarAdmin()" class="btn btn-success btn-md btn-block mt-2">Ingresar como Admin</button>
                 <div class="form-group mt-3">
                     <p>Create an account? <a [routerLink]="['/register']">Register</a></p>
                 </div>
