--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,1 +1,113 @@
-<p>register works!</p>
+<div class="row">
+    <div class="col-md-7 mx-auto mt-5">
+        <div class="card">
+            <div class="card-body">
+                <h1 class="text-center mb-3"><b>Registro</b></h1>
+                <form [formGroup]="registerForm" (ngSubmit)="onRegister()">
+                    <div class="row formulario">
+                        <div class="form-group col-md-6 mb-3">
+                            <label for="nombre">Nombre</label>
+                            <input type="text" id="nombre" class="form-control" formControlName="nombre">
+                            <small class="invalid"
+                                *ngIf="registerForm.get('nombre')?.errors?.required && registerForm.get('nombre')?.touched">El
+                                nombre es requerido</small>
+                        </div>
+                        <div class="form-group col-md-6 mb-3">
+                            <label for="apellido">Apellido</label>
+                            <input type="text" id="apellido" class="form-control" formControlName="apellido">
+                            <small class="invalid"
+                                *ngIf="registerForm.get('apellido')?.errors?.required && registerForm.get('apellido')?.touched ">El
+                                apellido es
+                                requerido</small>
+                        </div>
+                        <div class="form-group col-md-6 mb-3">
+                            <label for="edad">Edad</label>
+                            <input type="number" id="edad" class="form-control" formControlName="edad">
+                            <small class="invalid"
+                                *ngIf="registerForm.get('edad')?.errors?.required && registerForm.get('edad')?.touched ">
+                                La edad es requerida</small>
+                            <small class="invalid"
+                                *ngIf="registerForm.get('edad')?.errors?.min || registerForm.get('edad')?.errors?.max   && registerForm.get('edad')?.touched ">La
+                                edad debe ser entre 18 a 99 años</small>
+                        </div>
+                        <div class="form-group col-md-6 mb-3">
+                            <label for="dni">DNI</label>
+                            <input type="number" id="dni" class="form-control" formControlName="dni">
+                            <small class="invalid"
+                                *ngIf="registerForm.get('dni')?.errors?.required && registerForm.get('dni')?.touched ">
+                                El DNI es requerido</small>
+                            <small class="invalid"
+                                *ngIf="registerForm.get('dni')?.errors?.min || registerForm.get('dni')?.errors?.max   && registerForm.get('dni')?.touched ">El
+                                DNI debe ser entre 1.000.000 a 99.999.999</small>
+                        </div>
+                        <div class="form-group col-md-6 mb-3">
+                            <label for="email">Email</label>
+                            <input type="text" id="email" class="form-control" formControlName="email">
+                            <small class="invalid"
+                                *ngIf="registerForm.get('email')?.errors?.required && registerForm.get('email')?.touched ">
+                                El email es requerido</small>
+                        </div>
+                        <div class="form-group col-md-6 mb-3">
+                            <label for="contraseña">Contraseña</label>&nbsp;<small>(minimo 6 caracteres)</small>
+                            <input type="password" id="contraseña" class="form-control" formControlName="contraseña">
+                            <small class="invalid"
+                                *ngIf="registerForm.get('contraseña')?.errors?.required && registerForm.get('contraseña')?.touched ">
+                                La contraseña es requerida</small>
+                        </div>
+
+                        
+
+                        <div class="form-group col-md-6 mb-3">
+                            <label for="obraSocial" class="form-label">Tipo de perfil</label>
+                            <div class="custom-control custom-radio" (click)="CambiaPerfil()">
+                                <input type="radio" id="Paciente" name="tipoPerfil" class="custom-control-input"
+                                    checked formControlName="tipoPerfil" value="Paciente" (click)="CambiaPerfil()">
+                                <label class="custom-control-label" for="Paciente" (click)="CambiaPerfil()">Paciente</label>
+                            </div>
+                            <div class="custom-control custom-radio" (click)="CambiaPerfil()">
+                                <input type="radio" id="Especialista" name="tipoPerfil" class="custom-control-input" 
+                                value="Especialista" formControlName="tipoPerfil" (click)="CambiaPerfil()">
+                                <label class="custom-control-label" for="Especialista" (click)="CambiaPerfil()">Especialista</label>
+                            </div>
+                        </div>
+                        
+                        <div class="form-group col-md-6 mb-3">
+                            <label for="obraSocial" class="form-label">Seleccione su obra social &nbsp;&nbsp;</label>
+                            <select class="form-select" id="obraSocial" formControlName="obraSocial">
+                                <option value="" selected="true">Seleccione uno</option>
+                                <option value="OSDE">OSDE</option>
+                                <option value="Swiss Medical">Swiss Medical</option>
+                                <option value="Galeno">Galeno</option>
+                                <option value="Otra">Otra</option>
+                            </select>
+                            <small class="invalid"
+                                *ngIf="registerForm.get('obraSocial')?.errors?.required && registerForm.get('obraSocial')?.touched">
+                                La obra social es requerida</small>
+                        </div>
+
+                        <!-- <div class="col-sm-12">
+                            <label for="foto1" class="form-label">Foto numero 1</label>
+                            <input type="file" class="form-control" id="foto1" formControlName="foto1"
+                                (change)="nuevaImagen($event, 'foto1')">
+                        </div>
+
+                        <div class="col-sm-12 mb-4">
+                            <label for="foto2" class="form-label">Foto numero 2</label>
+                            <input type="file" class="form-control" id="foto2" formControlName="foto2"
+                                (change)="nuevaImagen($event, 'foto2')">
+                        </div> -->
+                       
+                    </div>
+                    <!-- <button type="submit" class="btn btn-primary btn-lg btn-block"
+                        [disabled]="registerForm.invalid">Crear cuenta nueva</button> -->
+                    <button type="submit" class="btn btn-primary btn-lg btn-block">Crear cuenta nueva</button>
+
+                </form>
+                <button type="submit" class="btn btn-primary" (click)="CargaDatos()">Carga trucho</button>
+                <div class="form-group mt-3">
+                    <p>¿Ya tienes una cuenta?&nbsp; <a [routerLink]="['/login']">Iniciar Sesión</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
