--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -1,3 +1,22 @@
 .invalid {
     color: red;
 }
+
+.ligth{
+    background-color: green !important;
+    color: green !important;
+}
+
+.marco{
+    border: 2px solid white;
+    padding: 12px;
+    height: 100%;
+    width: 100%;
+}
+#box{
+    margin-right: 20px;
+}
+
+.blanco{
+    color:whitesmoke
+}
