--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -15,6 +15,7 @@
                     <button type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
                 </form>
                 <button (click)="cargarAdmin()" class="btn btn-success btn-md btn-block mt-2">Ingresar como Admin</button>
+                <button (click)="cargarMatias()" class="btn btn-success btn-md btn-block mt-2">Ingresar como Matias</button>
                 <div class="form-group mt-3">
                     <p>Create an account? <a [routerLink]="['/register']">Register</a></p>
                 </div>
