--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -20,3 +20,22 @@
 .blanco{
     color:whitesmoke
 }
+
+
+.FormularioEspecialista{
+    background: url('../../../assets/Hospital.jpg') no-repeat  !important;
+    background-attachment: fixed !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+     width: 100% !important; 
+     height: 100% !important; 
+}
+
+.FormularioPaciente{
+    background: url('../../../assets/Paciente6.jpg') no-repeat ;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+     width: 100%; 
+     height: 100%; 
+}
