--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="row">
-    <div class="col-md-7 mx-auto mt-5">
+    <div class="col-md-7 mx-auto mt-5" *ngIf="registerForm != undefined">
         <div class="card">
-            <div class="card-body">
+            <div class="card-body FormularioPaciente" [ngClass]="{FormularioEspecialista: this.tipoPerfil =='Especialista'}">
                 <h1 class="text-center mb-3"><b>Registro</b></h1>
                 <form [formGroup]="registerForm" (ngSubmit)="onRegister()">
                     <div class="row formulario">
@@ -9,7 +9,7 @@
                             <label for="nombre">Nombre</label>
                             <input type="text" id="nombre" class="form-control" formControlName="nombre">
                             <small class="invalid"
-                                *ngIf="registerForm.get('nombre')?.errors?.required && registerForm.get('nombre')?.touched">El
+                                *ngIf="registerForm?.get('nombre')?.errors?.required && registerForm.get('nombre')?.touched">El
                                 nombre es requerido</small>
                         </div>
                         <div class="form-group col-md-6 mb-3">
@@ -56,24 +56,7 @@
                         </div>
 
 
-
-                        <div class="form-group col-md-6 mb-3">
-                            <label for="obraSocial" class="form-label">Tipo de perfil</label>
-                            <div class="custom-control custom-radio" (click)="CambiaPerfil()">
-                                <input type="radio" id="Paciente" name="tipoPerfil" class="custom-control-input" checked
-                                    formControlName="tipoPerfil" value="Paciente" (click)="CambiaPerfil()">
-                                <label class="custom-control-label" for="Paciente"
-                                    (click)="CambiaPerfil()">Paciente</label>
-                            </div>
-                            <div class="custom-control custom-radio" (click)="CambiaPerfil()">
-                                <input type="radio" id="Especialista" name="tipoPerfil" class="custom-control-input"
-                                    value="Especialista" formControlName="tipoPerfil" (click)="CambiaPerfil()">
-                                <label class="custom-control-label" for="Especialista"
-                                    (click)="CambiaPerfil()">Especialista</label>
-                            </div>
-                        </div>
-
-                        <div class="form-group col-md-6 mb-3" *ngIf="perfil =='Paciente'">
+                        <div class="form-group col-md-6 mb-3" *ngIf="tipoPerfil =='Paciente'">
                             <label for="obraSocial" class="form-label">Seleccione su obra social &nbsp;&nbsp;</label>
                             <select class="form-select" id="obraSocial" formControlName="obraSocial">
                                 <option value="" selected="true">Seleccione uno</option>
@@ -93,17 +76,18 @@
                                 (change)="nuevaImagen($event, 'foto1')">
                         </div>
 
-                        <div class="col-sm-12" *ngIf="perfil =='Paciente'">
+                        <div class="col-sm-12" *ngIf="tipoPerfil =='Paciente'">
                             <label for="foto2" class="form-label">Foto numero 2</label>
                             <input type="file" class="form-control" id="foto2" formControlName="foto2"
                                 (change)="nuevaImagen($event, 'foto2')">
                         </div>
 
 
-                        <div class="col-sm-12" *ngIf="perfil =='Especialista'" >
+                        <div class="col-sm-12" *ngIf="tipoPerfil =='Especialista'">
                             <h4 class="mb-3 text-center mt-3">Especialidades</h4>
-                            <div class="actorPrincipal"> 
-                                <h6 class=" text-center"> Seleccione uno o varias especialidades de la lista de la derecha o genere una nueva</h6>
+                            <div class="actorPrincipal">
+                                <h6 class=" text-center"> Seleccione uno o varias especialidades de la lista de la
+                                    derecha o genere una nueva</h6>
                             </div>
                             <div class="col-md-12 mb-4" *ngIf="!banderaEspecialidadSeleccionada">
                                 <ul class="list-group mb-3 card-body overflow-auto" id="boxConScroll"
@@ -114,19 +98,22 @@
 
                                         <input type="text" class="form-control"
                                             value="{{especialidad.nombre}} {{especialidad.duracion}}" disabled>
-                                        <button class="btn btn-danger" (click)="eliminarEspecialidad(especialidad)"><b>X</b></button>
+                                        <button class="btn btn-danger"
+                                            (click)="eliminarEspecialidad(especialidad)"><b>X</b></button>
                                     </li>
                                 </ul>
                             </div>
                         </div>
 
                     </div>
-                    <!-- <button type="submit" class="btn btn-primary btn-lg btn-block"
-                        [disabled]="registerForm.invalid">Crear cuenta nueva</button> -->
-                    <button type="submit" class=" mt-4 btn btn-primary btn-lg btn-block">Crear cuenta nueva</button>
+                    <button type="submit" class="btn btn-primary btn-lg btn-block"
+                        [disabled]="registerForm.invalid">Crear cuenta nueva</button>
+                    
+                    <!-- <button type="submit" class=" mt-4 btn btn-primary btn-lg btn-block">Crear cuenta nueva</button> -->
 
                 </form>
                 <button type="submit" class="btn btn-primary" (click)="CargaDatos()">Carga trucho</button>
+                <!-- <button type="submit" class="btn btn-primary" (click)="veoForm()">VeoForm</button> -->
                 <div class="form-group mt-3">
                     <p>¿Ya tienes una cuenta?&nbsp; <a [routerLink]="['/login']">Iniciar Sesión</a></p>
                 </div>
@@ -134,7 +121,7 @@
         </div>
     </div>
 
-    <div class="col-md-5 col-lg-4 order-md-last mt-5" id="box" *ngIf="perfil =='Especialista'">
+    <div class="col-md-5 col-lg-4 order-md-last mt-5" id="box" *ngIf="tipoPerfil =='Especialista'">
         <div class="card">
             <div class="card-body">
                 <h4 class="d-flex justify-content-between align-items-center mb-3"
@@ -142,9 +129,10 @@
                     <h4 class="text-primary text-center">Listado de especialidades</h4>
                     <span class="badge bg-primary rounded-pill">{{listadoEspecialidades.length}}</span>
                 </h4>
-                <ul class="list-group mb-3 table-light" >
+                <ul class="list-group mb-3 table-light">
                     <li class="list-group-item d-flex justify-content-between lh-sm"
-                        *ngFor="let especialidad of listadoEspecialidades let i=index" (click)="agregarEspecialidad(especialidad)">
+                        *ngFor="let especialidad of listadoEspecialidades let i=index"
+                        (click)="agregarEspecialidad(especialidad)">
                         <div class="marco">
                             <h6 class="my-0 text-info"><b>{{especialidad.nombre}} </b></h6>
                             <small class="text-muted">{{especialidad.duracion}} minutos </small>
