--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -46,7 +46,7 @@
                     <a class="nav-link" routerLink="/login">Login</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" routerLink="/register">Register</a>
+                    <a class="nav-link" routerLink="/tiposDeRegistros">Register</a>
                 </li>
             </ul>
         </ng-template>
