--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -113,7 +113,7 @@
 
                 </form>
                 <button type="submit" class="btn btn-primary" (click)="CargaDatos()">Carga trucho</button>
-                <!-- <button type="submit" class="btn btn-primary" (click)="veoForm()">VeoForm</button> -->
+                <button type="submit" class="btn btn-primary" (click)="veoForm()">VeoForm</button>
                 <div class="form-group mt-3">
                     <p>¿Ya tienes una cuenta?&nbsp; <a [routerLink]="['/login']">Iniciar Sesión</a></p>
                 </div>
