--- a/src/app/auth/opciones-de-usuarios/opciones-de-usuarios.component.scss
+++ b/src/app/auth/opciones-de-usuarios/opciones-de-usuarios.component.scss
@@ -5,12 +5,20 @@
     background-position: 50%;
     border-radius: 50%;
     background-size: 100% auto;
-    
 }
 
+.imagenPerfilChica{
+    height: 130px;
+    width: 130px;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    border-radius: 50%;
+    background-size: 100% auto;
+}
 
 .centrado {
     justify-content: center;
     align-items: center;
     text-align: center;
 }
+
