--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -11,7 +11,7 @@
             <li class="nav-item active">
                 <a class="nav-link" [routerLink]="['/home']">Home</a>
             </li>
-            <li class="nav-item active" *ngIf="authSvc.usuario.uid" >
+            <li class="nav-item active" *ngIf="authSvc.usuario.uid && this.usuario?.tipoPerfil =='Admin' " >
                 <a class="nav-link"  [routerLink]="['/usuarios']">Usuarios</a>
             </li>
             <!-- <li class="nav-item active">
