--- a/src/app/components/solicitar-turno/solicitar-turno.component.html
+++ b/src/app/components/solicitar-turno/solicitar-turno.component.html
@@ -1,101 +1,40 @@
 <div class="row">
-    <div class="col-md-4 mx-auto mt-4" *ngIf="registerForm != undefined">
+    <div class="col-md-9 mx-auto mt-4">
         <div class="card">
             <div class="card-body">
                 <h1 class="text-center mb-3"><b>Solicitar Turno.</b></h1>
-                <form [formGroup]="registerForm" (ngSubmit)="onRegister()">
-                    <div class="row formulario">
-
-                        <div class="form-group col-md-6 mb-3" >
-                            <label for="obraSocial" class="form-label">Seleccione la especialidad &nbsp;&nbsp;</label>
-                            <select class="form-select" id="obraSocial" formControlName="obraSocial">
-                                <option value="" selected="true">Seleccione uno</option>
-                                <option value="OSDE">OSDE</option>
-                                <option value="Swiss Medical">Swiss Medical</option>
-                                <option value="Galeno">Galeno</option>
-                                <option value="Otra">Otra</option>
-                            </select>
-                            <small class="invalid"
-                                *ngIf="registerForm.get('obraSocial')?.errors?.required && registerForm.get('obraSocial')?.touched">
-                                La especialidad es requerida</small>
-                        </div>
-
-                        <div class="form-group col-md-6 mb-3" >
-                            <label for="obraSocial" class="form-label">Seleccione el especialista &nbsp;&nbsp;</label>
-                            <select class="form-select" id="obraSocial" formControlName="obraSocial">
-                                <option value="" selected="true">Seleccione uno</option>
-                                <option value="OSDE">OSDE</option>
-                                <option value="Swiss Medical">Swiss Medical</option>
-                                <option value="Galeno">Galeno</option>
-                                <option value="Otra">Otra</option>
-                            </select>
-                            <small class="invalid"
-                                *ngIf="registerForm.get('obraSocial')?.errors?.required && registerForm.get('obraSocial')?.touched">
-                                El especialista es requerido</small>
-                        </div>
-
-                        <div class="form-group col-md-6 mb-3">
-                            <label for="nombre">Especialidad</label>
-                            <input type="text" id="nombre" class="form-control" formControlName="nombre">
-                            <small class="invalid"
-                                *ngIf="registerForm?.get('nombre')?.errors?.required && registerForm?.get('nombre')?.touched">El
-                                nombre es requerido</small>
-                        </div>
-                        <div class="form-group col-md-6 mb-3">
-                            <label for="apellido">Apellido</label>
-                            <input type="text" id="apellido" class="form-control" formControlName="apellido">
-                            <small class="invalid"
-                                *ngIf="registerForm?.get('apellido')?.errors?.required && registerForm?.get('apellido')?.touched ">El
-                                apellido es
-                                requerido</small>
-                        </div>
-                        <div class="form-group col-md-6 mb-3">
-                            <label for="edad">Edad</label>
-                            <input type="number" id="edad" class="form-control" formControlName="edad">
-                            <small class="invalid"
-                                *ngIf="registerForm?.get('edad')?.errors?.required && registerForm?.get('edad')?.touched ">
-                                La edad es requerida</small>
-                            <small class="invalid"
-                                *ngIf="registerForm?.get('edad')?.errors?.min || registerForm?.get('edad')?.errors?.max   && registerForm?.get('edad')?.touched ">La
-                                edad debe ser entre 18 a 99 años</small>
-                        </div>
-                        <div class="form-group col-md-6 mb-3">
-                            <label for="dni">DNI</label>
-                            <input type="number" id="dni" class="form-control" formControlName="dni">
-                            <small class="invalid"
-                                *ngIf="registerForm?.get('dni')?.errors?.required && registerForm?.get('dni')?.touched ">
-                                El DNI es requerido</small>
-                            <small class="invalid"
-                                *ngIf="registerForm?.get('dni')?.errors?.min || registerForm?.get('dni')?.errors?.max   && registerForm?.get('dni')?.touched ">El
-                                DNI debe ser entre 1.000.000 a 99.999.999</small>
-                        </div>
-                        <div class="form-group col-md-6 mb-3">
-                            <label for="email">Email</label>
-                            <input type="text" id="email" class="form-control" formControlName="email">
-                            <small class="invalid"
-                                *ngIf="registerForm?.get('email')?.errors?.required && registerForm?.get('email')?.touched ">
-                                El email es requerido</small>
-                        </div>
-                        <div class="form-group col-md-6 mb-3">
-                            <label for="contraseña">Contraseña</label>&nbsp;<small>(minimo 6 caracteres)</small>
-                            <input type="password" id="contraseña" class="form-control" formControlName="contraseña">
-                            <small class="invalid"
-                                *ngIf="registerForm?.get('contraseña')?.errors?.required && registerForm?.get('contraseña')?.touched ">
-                                La contraseña es requerida</small>
-                        </div>
-
+                <div class="row formulario">
+                    <div class="form-group col-md-6 mb-3">
+                        <label for="especialidadElejida" class="form-label">Seleccione la especialidad
+                            &nbsp;&nbsp;</label>
+                        <select class="form-select" name="especialidadElejida" id="especialidadElejida" [(ngModel)]="especialidadNombre"
+                            (change)="onChangeEspecialidad($event)">
+                            <option *ngFor="let especialidad of listadoEspecialidades let i=index"
+                                value="{{especialidad.nombre}}">{{especialidad.nombre}}</option>
+                        </select>
                     </div>
-                    <button type="submit" class="btn btn-primary btn-lg btn-block mt-2"
-                        [disabled]="registerForm.invalid">Solicitar Turno</button>
-
-                </form>
-                <!-- <button type="submit" class="btn btn-primary" (click)="CargaDatos()">Carga trucho</button>
-                <button type="submit" class="btn btn-primary" (click)="veoForm()">VeoForm</button> -->
-                <!-- <div class="form-group mt-3">
-                    <p>¿Ya tienes una cuenta?&nbsp; <a [routerLink]="['/login']">Iniciar Sesión</a></p>
-                </div> -->
+                    <div class="form-group col-md-6 mb-3" *ngIf="especialidadElejida != null">
+                        <label for="profesional" class="form-label">Seleccione el profesional &nbsp;&nbsp;</label>
+                        <select class="form-select" name="profesional" id="profesional" [(ngModel)]="especialistaNombre" (change)="onChangeEspecialista($event)">
+                            <option *ngFor="let especialista of listadoUsuariosEspecialistasCalificados let i=index" value={{especialista.nombre}} >{{especialista.nombre}}</option>
+                        </select>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary btn-lg btn-block mt-2" (click)="pedirTurno()">Solicitar Turno</button>
             </div>
         </div>
     </div>
+</div>
 
+<div class="row">
+    <div class="col-md-9 mx-auto mt-4">
+        <div class="card">
+            <div class="card-body">
+                <h1 class="text-center mb-3"><b>Listado de dias y horarios.</b></h1>
+                <div class="row ">
+                    
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
