--- a/src/app/components/solicitar-turno/solicitar-turno.component.html
+++ b/src/app/components/solicitar-turno/solicitar-turno.component.html
@@ -24,6 +24,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary btn-lg btn-block mt-2" (click)="pedirTurno()">Solicitar
                     Turno</button>
+                <button class="btn btn-primary btn-lg btn-block mt-2" (click)="auxiliar()">auxiliar</button>
             </div>
         </div>
     </div>
