Se le agrega un slider al home con 3 imagenes faltan los redirects

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -154,7 +154,7 @@
                         <select class="form-select" id="duracion" [(ngModel)]="duracionEspecialidad">
                             <option value="" selected="true">Seleccione uno</option>
                             <option value="30">30 minutos</option>
-                            <option value="45">45 minutos</option>
+                            <!-- <option value="45">45 minutos</option> -->
                             <option value="60">60 minutos</option>
                         </select>
                     </div>
