--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,57 @@
-
-<div class="container mt-5">
-    <div class="pb-4">
-        <h1>Bienvenidos a la Clinica On Line.</h1>
+<div id="myCarousel" class="carousel slide mt-2" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true"
+            aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"
+                src="../../assets/slider_01.png">
+
+            <div class="container">
+                <div class="carousel-caption text-start">
+                    <h1>Bienvenido a la Clinica On Line.</h1>
+                    <p>Necesita sacar un turno.</p>
+                    <p><a class="btn btn-lg btn-primary" href="#">Pedir turno.</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"
+                src="../../assets/slider_03.png">
+
+            <div class="container">
+                <div class="carousel-caption">
+                    <h1>Quiere ver sus turnos.</h1>
+                    <p>Ver el listado de turnos realizados y los que todavia no lo fueron.</p>
+                    <p><a class="btn btn-lg btn-primary" href="#">Ver mis turnos</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"
+                src="../../assets/slider_04.png">
+
+            <div class="container">
+                <div class="carousel-caption text-end">
+                    <h1>La mejor atención.</h1>
+                    <p>Nuestra clinica se caracteriza por la agilidad en la hora de dar y gestionar los turnos.</p>
+                    <!-- <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p> -->
+                </div>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
 </div>
